@@ -1,3 +1,7 @@
+Mon Apr 18 11:25:14 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
+
+	* ext/zlib/zlib.c (zstream_run): fixed SEGV. [ruby-core:4712]
+
 Sun Apr 17 23:57:49 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/extmk.rb (extmake, parse_args): do not expand destdir.
